--- a/Task-1/css/style.css
+++ b/Task-1/css/style.css
@@ -29,12 +29,11 @@ body {
 }
 .nav__items a:hover {
   color: aquamarine;
-  transition: s;
 }
 .container__one {
   background: #d1d8e8;
-  height: 380px;
   margin-top: 20px;
+  padding-bottom: 50px;
 }
 h2 {
   padding: 20px 10px;
@@ -49,6 +48,7 @@ p {
 .container__two {
   display: flex;
   justify-content: space-between;
+  margin: 10px 0 50px;
 }
 .container__two p {
   color: #030107;
@@ -63,11 +63,40 @@ p {
 }
 .box {
   background: #d1d8e8;
-  width: calc(100% / 3);
-  height: 300px;
-  margin-top: 15px;
+  width: 500px;
 }
 .box__margin {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 0 10px;
+}
+@media screen and (max-width: 500px) {
+  .container__one {
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+  }
+  .nav__items {
+    padding: 10px;
+    font-size: small;
+  }
+  .container__two {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .box {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .box__margin {
+    margin: 10px 0;
+  }
+  .logo {
+    width: 50px;
+    height: 50px;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .box {
+    flex-grow: 1;
+  }
 }
