--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   background-color: #332121;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .nav__bar {
   background-color: #543561;
