--- a/task-1/css/style.css
+++ b/task-1/css/style.css
@@ -100,9 +100,14 @@ p {
   .box__margin {
     margin: 10px 0;
   }
-  .logo {
+  .logo img {
     width: 50px;
     height: 50px;
+  }
+  .logo h2 {
+    font-size: 0.8rem;
+    margin-bottom: 0;
+    margin-top: 19px;
   }
 }
 @media screen and (min-width: 1500px) {
