--- a/task-5/css/style.css
+++ b/task-5/css/style.css
@@ -76,6 +76,7 @@ h2 {
 }
 .student__table {
   margin: 0 1rem;
+  overflow: auto;
 }
 table {
   width: 100%;
@@ -89,11 +90,6 @@ td {
   border: 1px solid lightgray;
   border-collapse: collapse;
   padding: 0.5rem 1rem;
-}
-@media screen and (max-width: 400px) {
-  html {
-    font-size: 4px;
-  }
 }
 @media screen and (min-width: 680px) {
   html {
@@ -129,6 +125,6 @@ td {
 }
 @media screen and (min-width: 1600px) {
   html {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
