--- a/task-5/css/admission.css
+++ b/task-5/css/admission.css
@@ -1,4 +1,5 @@
-html {
+html,
+button {
   font-size: 62.5%;
 }
 body {
@@ -7,14 +8,13 @@ body {
   margin: 0;
   color: #575757;
   line-height: 1.5;
-  height: 200vh;
 }
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid lightgrey;
-  padding: 0.3rem;
+  /* padding: 0.3rem; */
 }
 h2 {
   margin: 0;
@@ -28,7 +28,7 @@ h2 {
   padding: 0.3rem;
 }
 .logo-container h2 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   transform: translateY(-2.5px);
 }
 .profile__image {
@@ -45,8 +45,8 @@ h2 {
   margin: 0;
 }
 .list__item {
-  font-size: 1rem;
-  padding: 1rem;
+  font-size: 0.8rem;
+  padding: 1rem 1.5rem;
 }
 .list__item a {
   text-decoration: none;
@@ -54,24 +54,22 @@ h2 {
   cursor: pointer;
 }
 .main-container {
-  margin: 1rem;
-  height: 180vh;
+  margin: 0.5rem 0;
+  height: 100vh;
 }
 span {
   color: red;
 }
 .heading {
-  padding-bottom: 0.8rem;
+  display: flex;
 }
 .heading a {
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #575757;
-  padding-left: 1.3rem;
+  padding: 0.8rem 0 0.8rem 2rem;
 }
 form {
-  width: 100%;
-  height: 50vh;
-  padding-left: 1.3rem;
+  padding-left: 2rem;
 }
 label {
   display: block;
@@ -113,8 +111,9 @@ button[type="reset"] {
   align-items: center;
 }
 textarea {
+  width: 50%;
   resize: none;
-  border: 1px solid #575757;
+  border: 1px solid lightgray;
   outline: 0;
 }
 .button {
@@ -136,17 +135,65 @@ button[type="submit"] {
   .sidebar {
     border-bottom: 0;
     width: 15%;
+    height: 100vh;
   }
   .sidebar ul {
     display: block;
     border-right: 2px solid lightgray;
-    height: 180vh;
+    height: 100vh;
   }
   main {
     display: flex;
+    height: 100vh;
   }
   .main-container {
     width: 85%;
     margin: 0;
+    height: 100vh;
+  }
+  .section_one,
+  .section_two,
+  .section_three {
+    display: flex;
+    justify-content: space-between;
+  }
+  .section_one div,
+  .section_two div,
+  .section_three div {
+    width: 45%;
+  }
+  .radio {
+    display: flex;
+  }
+  .section_four,
+  .check {
+    margin-right: 5rem;
+  }
+  .check {
+    display: flex;
+    justify-content: space-between;
+  }
+  input[type="checkbox"],
+  input[type="radio"] {
+    margin-right: 0.5rem;
+    padding: 1rem;
+  }
+  input[type="text"],
+  input[type="tel"],
+  input[type="email"] {
+    border-radius: 0px;
+  }
+  button[type="reset"],
+  button[type="submit"] {
+    padding: 1rem 3rem;
+  }
+}
+@media screen and (min-width: 1600px) {
+  html {
+    font-size: 22px;
+  }
+  button[type="reset"],
+  button[type="submit"] {
+    padding: 1.5rem 3.5rem;
   }
 }
