--- a/task-5/css/style.css
+++ b/task-5/css/style.css
@@ -14,7 +14,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid lightgrey;
-  padding: 0.3rem;
+  /* padding: 0.3rem; */
 }
 h2 {
   margin: 0;
@@ -99,7 +99,7 @@ td {
   .sidebar {
     border-bottom: 0;
     width: 15%;
-    height: 100%;
+    height: 100vh;
   }
   .sidebar ul {
     display: block;
