--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,23 @@
-body {
-  height: 100vh;
+html {
+  font-size: 62.5%;
 }
-.main__container {
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 .heading {
   display: flex;
   justify-content: center;
   color: aliceblue;
-  font-family: Georgia, "Times New Roman", Times, serif;
-  margin: 20px 0 0 0;
+  font-size: 1.5rem;
 }
 .box {
+  margin: 2rem;
   width: 550px;
   height: 250px;
   background: linear-gradient(
@@ -33,11 +35,11 @@ body {
   align-items: center;
 }
 .link a {
-  padding: 15px;
-  margin: 20px;
+  padding: 1.2rem;
+  margin: 2rem;
+  font-size: 2rem;
   text-decoration: none;
   color: white;
-  font-size: x-large;
   transition: 0.5s;
 }
 a:hover {
@@ -46,4 +48,12 @@ a:hover {
 }
 .box:hover {
   padding: 15px;
+}
+@media screen and (max-width: 500px) {
+  html {
+    font-size: 7px;
+  }
+  .heading {
+    margin: 5rem 2rem 2rem;
+  }
 }
