--- a/task-5/css/admission.css
+++ b/task-5/css/admission.css
@@ -14,7 +14,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid lightgrey;
-  /* padding: 0.3rem; */
+  padding: 0.3rem;
 }
 h2 {
   margin: 0;
@@ -191,9 +191,5 @@ button[type="submit"] {
 @media screen and (min-width: 1600px) {
   html {
     font-size: 22px;
-  }
-  button[type="reset"],
-  button[type="submit"] {
-    padding: 1.5rem 3.5rem;
   }
 }
