--- a/task-5/css/style.css
+++ b/task-5/css/style.css
@@ -14,7 +14,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid lightgrey;
-  /* padding: 0.3rem; */
+  padding: 0.3rem;
 }
 h2 {
   margin: 0;
