--- a/task-5/css/admission.css
+++ b/task-5/css/admission.css
@@ -93,14 +93,6 @@ textarea:focus {
 .form-group {
   margin-bottom: 1rem;
 }
-button[type="submit"],
-button[type="reset"] {
-  color: #fff;
-  border: 0;
-  padding: 0.5rem 2rem;
-  border-radius: 5rem;
-  outline: 0;
-}
 .radio div {
   display: flex;
   align-items: center;
@@ -119,6 +111,18 @@ textarea {
   display: flex;
   justify-content: flex-end;
   padding: 2rem;
+}
+button[type="submit"],
+button[type="reset"] {
+  color: #fff;
+  border: 0;
+  padding: 0.8rem 2.4rem;
+  border-radius: 5rem;
+  outline: 0;
+  font-size: 0.7rem;
+  font-weight: normal;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 button[type="reset"] {
   background-color: #ff7261;
@@ -190,5 +194,10 @@ button[type="submit"] {
 @media screen and (min-width: 1600px) {
   html {
     font-size: 22px;
+  }
+}
+@media screen and (min-width: 2000px) {
+  html {
+    font-size: 30px;
   }
 }
