--- a/task-5/css/admission.css
+++ b/task-5/css/admission.css
@@ -45,7 +45,16 @@ h2 {
 }
 .list__item {
   font-size: 0.8rem;
-  padding: 1rem 1.5rem;
+  padding: 1rem 1rem;
+}
+.list__item img {
+  margin-right: 0.5rem;
+  width: 1rem;
+  height: 1rem;
+}
+.flex {
+  display: flex;
+  align-items: center;
 }
 .list__item a {
   text-decoration: none;
